# pyanimecli-fork

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
pyanimecli/: __init__.py  __main__.py  pyanimecli.py  tui.py
