[project]
name = "pyanimecli"
version = "1.0.4"
description = "A powerful command-line interface for searching, getting info, and watching anime directly from your terminal."
authors = [{name="Gamma", email="Gamma.scratch@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
dependencies = ["requests", "rich"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
pyanimecli = "pyanimecli.pyanimecli:main"
